Basic 'data store' code added to libkernel.
Just the capability code adapted for use inside the libkernel.

Basic tests passing. Coalesced a lot of the liblcd tests into
one spot (in liblcd/lcd/test.c).

--- a/liblcd/Makefile
+++ b/liblcd/Makefile
@@ -1,5 +1,6 @@
 
-lib-y    +=  $(addprefix lcd/, cap.o enterexit.o ipc.o page_alloc.o printk.o)
+lib-y    +=  $(addprefix lcd/, cap.o enterexit.o ipc.o page_alloc.o printk.o \
+				dstore.o tests.o)
 
 lib-y    +=  $(addprefix lib/, find_next_bit.o kstrtox.o string.o \
 			       vsprintf.o ctype.o hexdump.o       \
