--- a/virt/lcd-domains/test-mods/Makefile
+++ b/virt/lcd-domains/test-mods/Makefile
@@ -4,12 +4,10 @@
 
 export LIBLCD = ../../../../liblcd/lib.a
 
-obj-$(CONFIG_LCD_TEST_MOD_LOAD)   += load/
+obj-$(CONFIG_LCD_TEST_MOD_LOAD)         += load/
 
-obj-$(CONFIG_LCD_TEST_MOD_IPC1)   += ipc1/
+obj-$(CONFIG_LCD_TEST_MOD_IPC1)         += ipc1/
 
-obj-$(CONFIG_LCD_TEST_MOD_IPC2)   += ipc2/
+obj-$(CONFIG_LCD_TEST_MOD_IPC2)         += ipc2/
 
-obj-$(CONFIG_LCD_TEST_MOD_PRINTK) += printk/
-
-obj-$(CONFIG_LCD_TEST_MOD_MM)     += mm/
+obj-$(CONFIG_LCD_TEST_MOD_LIBLCD_TESTS) += liblcd-tests/
