--- a/virt/lcd-domains/test-mods/load/Makefile
+++ b/virt/lcd-domains/test-mods/load/Makefile
@@ -1,10 +1,14 @@
 
-# Main target
-obj-$(CONFIG_LCD_TEST_MOD_LOAD)  += lcd-test-mod-load.o
+# Main targets
+obj-$(CONFIG_LCD_TEST_MOD_LOAD_BOOT) += lcd-test-mod-load-boot.o
 
-lcd-test-mod-load-y              += main.o
+lcd-test-mod-load-boot-y             += boot.o
 
-lcd-test-mod-load-y              += $(LIBLCD)
+obj-$(CONFIG_LCD_TEST_MOD_LOAD_LCD)  += lcd-test-mod-load-lcd.o
+
+lcd-test-mod-load-lcd-y              += lcd.o
+
+lcd-test-mod-load-lcd-y              += $(LIBLCD)
 
 # We don't want the loop to be optimized away
-CFLAGS_lcd-test-mod-load          = -O0
+CFLAGS_lcd-test-mod-load-lcd         = -O0
