Breaks apart microkernel into smaller pieces, and refactors regression tests.
Trying to make the code base saner for others to read through.

Tests are no longer ran every time you insert the microkernel. They are built
as a separate kernel module (in virt/lcd-domains/tests/lcd-tests.ko).

Ran tests again, and some of the LCD functional tests. All appears OK.

--- a/virt/lcd-domains/Kconfig
+++ b/virt/lcd-domains/Kconfig
@@ -14,6 +14,12 @@ config LCD_DOMAINS
 config HAVE_LCD
        bool
 
+config LCD_DOMAINS_TESTS
+       tristate "Tests of Light-weight Capability Domains"
+       depends on LCD_DOMAINS
+       default m
+       ---help---
+       Simple unit tests for lcd domains. Loading the module runs the tests.
 
 menuconfig LCD_TEST_MOD
 	   bool "Test Modules"
