Adds 'data store' to non-isolated kliblcd.
Kind of boring, but important. Now poised for doing some non-isolated
glue code.

Kind of bummer we have essentially three copies of the cspace-related
code - one in liblcd (isolated data store), one in kliblcd, and one in
the microkernel (real cspaces). Hopefully we can coalesce and reduce
the redundancy at some point.

The data store code for kliblcd is in virt/lcd-domains/kliblcd/dstore.c.
The interface is in include/lcd-domains/kliblcd.h.

Moved dstore into kliblcd. No build yet.

Small typo in cap doc.

Debug something else.

Updated dstore to do get/put.

Fixes build. liblcd tests pass.

--- a/virt/lcd-domains/Makefile
+++ b/virt/lcd-domains/Makefile
@@ -17,7 +17,8 @@ lcd-domains-y                      += ../../arch/$(ARCH)/lcd-domains/main.o
 lcd-domains-y                      += kliblcd/init.o kliblcd/mem.o \
                                       kliblcd/ipc.o kliblcd/enterexit.o \
                                       kliblcd/create.o kliblcd/cap.o \
-                                      kliblcd/cptr_cache.o
+                                      kliblcd/cptr_cache.o \
+				      kliblcd/dstore.o
 # Unit tests module
 obj-$(CONFIG_LCD_DOMAINS_TESTS)    += tests/
 
