libcap-integration: Microkernel and kliblcd build bug fixes.
Microkernel and kliblcd compile. Some linker errors due to
missing resource tree and create objects. Going to refactor
build now, more code shuffling fun.

--- a/lcd-domains/Kbuild
+++ b/lcd-domains/Kbuild
@@ -11,6 +11,6 @@ KBUILD_CFLAGS := $(KBUILD_CFLAGS) $(LCD_DOMAINS_CFLAGS)
 
 # Dive into subdirs (note that kliblcd is built with microkernel)
 obj-m += microkernel/
-obj-m += tests/
-obj-m += test-mods/
+#obj-m += tests/
+#obj-m += test-mods/
 
