--- a/lib/Makefile
+++ b/lib/Makefile
@@ -147,7 +147,10 @@ lib-$(CONFIG_LIBFDT) += $(libfdt_files)
 obj-$(CONFIG_RBTREE_TEST) += rbtree_test.o
 obj-$(CONFIG_INTERVAL_TREE_TEST) += interval_tree_test.o
 
-interval_tree_test-objs := interval_tree_test_main.o interval_tree.o
+# Always include interval tree (for LCD Domains)
+obj-y += interval_tree.o
+
+interval_tree_test-objs := interval_tree_test_main.o
 
 obj-$(CONFIG_ASN1) += asn1_decoder.o
 
