build-refactor: Fix interval tree missing symbols.
Linux kernel doesn't export interval tree symbols. So we just
define our own (using the fancy generic macros Google made). This
is necessary for isolated liblcd anyway.

--- a/lcd-domains/Makefile
+++ b/lcd-domains/Makefile
@@ -65,7 +65,7 @@ libcap/configure:
 # clean
 
 clean: 
-	$(MAKE) -C .. M=$(PWD)/$(MICROKERNEL_BUILD_DIR) clean
+	$(MAKE) -C .. M=$(MICROKERNEL_BUILD_DIR) clean
 	if test -d $(MICROKERNEL_BUILD_DIR)/libcap.build; then \
 		$(MAKE) -C $(MICROKERNEL_BUILD_DIR)/libcap.build clean; \
 	fi
