build-refactor-2: Fix build errors. Microkernel and kliblcd build.
Now that microkernel libcap build is separated from microkernel build
itself, when we trigger a top-level microkernel build, it doesn't
rebuild the whole thing every time. Kind of nice.

--- a/lcd-domains/Makefile
+++ b/lcd-domains/Makefile
@@ -45,7 +45,7 @@ MICROKERNEL_DIRS= \
 MICROKERNEL_BUILD_DIRS=$(foreach dir,$(MICROKERNEL_DIRS),\
 	$(MICROKERNEL_BUILD_DIR)/$(dir))
 
-MICROKERNEL_LIBCAP=$(MICROKERNEL_BUILD_DIR)/libcap.install/src/platform/kernel/libcap.a
+MICROKERNEL_LIBCAP=$(MICROKERNEL_BUILD_DIR)/libcap.install/lib/libcap.a
 
 microkernel: $(MICROKERNEL_BUILD_DIR)/Kbuild $(MICROKERNEL_LIBCAP) | \
 	$(MICROKERNEL_BUILD_DIRS)
